Fix secondary button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,6 @@ img{
 }
 
 .secondButtons{
-	/*margin-top: .3125em;*/
 	padding: 0;
 	font-size: 1.85em;
 	color: #FFFFFF;
@@ -137,31 +136,23 @@ img{
 	box-sizing: border-box;
 }
 
-.secondButtons ul{
-	margin: 0;
-	list-style: none;
-	display: inline;
-}
-
-.secondButtons ul li{
-	margin: 0;
-	list-style: none;
-	display: inline-block;
+.secondButtons p{
+	display: inline-table;
+	width: 30%;
 	height: 10.1875em;
-	width: 30%
 }
 
-.secondButtons ul li:first-child{
+.secondButtons p:first-child{
 	background-color: #9B6E51;
 	margin-right: .3125em;
 }
 
-.secondButtons ul li:nth-child(2){
+.secondButtons p:nth-child(2){
 	background-color: #90986B;
 	margin-right: .3125em;
 }
 
-.secondButtons ul li:nth-child(3){
+.secondButtons p:nth-child(3){
 	background-color: #89A8E0;
 	margin-right: .3125em;
 }
